--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ coil = "2.5.0"
 viewmodel-compose = "2.8.7"
 retrofit = "2.9.0"
 moshi = "1.15.0"
+navigationCompose = "2.8.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,6 +30,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-viewmodel-compose = { group = "androidx.lifecycle", name="lifecycle-viewmodel-compose", version.ref="viewmodel-compose"}
+androidx-navigation-compose = { group = "androidx.navigation", name="navigation-compose", version.ref="navigationCompose" }
 coil = {group = "io.coil-kt", name = "coil-compose", version.ref="coil" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref="retrofit" }
 retrofit-convertermoshi = { group = "com.squareup.retrofit2", name="converter-moshi", version.ref="retrofit" }
