--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ viewmodel-compose = "2.8.7"
 retrofit = "2.9.0"
 moshi = "1.15.0"
 navigationCompose = "2.8.4"
+hilt = "2.51"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,7 +36,10 @@ coil = {group = "io.coil-kt", name = "coil-compose", version.ref="coil" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref="retrofit" }
 retrofit-convertermoshi = { group = "com.squareup.retrofit2", name="converter-moshi", version.ref="retrofit" }
 moshi = { group = "com.squareup.moshi", name="moshi-kotlin", version.ref="moshi" }
+hilt = { group = "com.google.dagger", name="hilt-android", version.ref="hilt" }
+hilt-kapt = { group = "com.google.dagger", name="hilt-android-compiler", version.ref="hilt"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref="hilt"}
