--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ retrofit = "2.9.0"
 moshi = "1.15.0"
 navigationCompose = "2.8.4"
 hilt = "2.51"
+hiltNavigationCompose = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +33,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-viewmodel-compose = { group = "androidx.lifecycle", name="lifecycle-viewmodel-compose", version.ref="viewmodel-compose"}
 androidx-navigation-compose = { group = "androidx.navigation", name="navigation-compose", version.ref="navigationCompose" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name="hilt-navigation-compose", version.ref="hiltNavigationCompose"}
 coil = {group = "io.coil-kt", name = "coil-compose", version.ref="coil" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref="retrofit" }
 retrofit-convertermoshi = { group = "com.squareup.retrofit2", name="converter-moshi", version.ref="retrofit" }
